Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127743

Selecting a point with the same index from another series does not work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8.0 Beta3
    • Graphs: 3D
    • None
    • 64f03a081 (dev), 13aa3760f (6.8)

      Selecting an item with the same index from a different series does not work.

      Replace the code in tst_minimalscatter with the attached snippet.

      Steps to reproduce:

      • click any of the points
      • try to click the point closest to it with another color

      -> the point does not get selected. If you click on the other colored point anywhere else, the selection works.

        For Gerrit Dashboard: QTBUG-127743
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes