Fix selecting a point with the same index

Selecting a point with the same index failed, as it was
not checked if the new point is in the same series as the
previous one.

Pick-to: 6.8
Fixes: QTBUG-127743
Change-Id: I57595f6c40b9465dbb0866f84351fe201fafd437
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>